force-app/main/default/objects/Hotal_Customer__c/Hotal_Customer__c.object-meta.xml
<CustomObject>
    <label>Hotal Customer</label>
    <nameField>
        <displayFormat>HR-{0000}</displayFormat>
        <label>Customer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotal Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>