force-app/main/default/objects/Hotal_Customer__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Kota</fullName>
            </value>
            <value>
                <fullName>Udaipur</fullName>
            </value>
            <value>
                <fullName>Jothpur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>