force-app/main/default/objects/Hotal_Customer__c/fields/Is_Married__c.field-meta.xml
<CustomField>
    <fullName>Is_Married__c</fullName>
    <label>Is Married</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Unmarried</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>