force-app/main/default/objects/Hotal_Customer__c/validationRules/Gender_should_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Gender_should_not_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Gender__c ,&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Gender__c</errorDisplayField>
    <errorMessage>Gender should not be empty</errorMessage>
</ValidationRule>