force-app/main/default/objects/Hotal_Customer__c/validationRules/Name_should_be_greater_then_two_char.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_should_be_greater_then_two_char</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( First_Name__c )   &lt;= 2</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>First name should be greater then two Characters</errorMessage>
</ValidationRule>